--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         console.log(author);
                         InnerHtml="<br /><p>"+title+"</p><p>"+addr+"</p><p>"+author+"</p><br/>";
                     }
-                    document.getElementById("articlelist").innerHTML(InnerHtml);
+                    document.getElementById("articlelist").innerHTML=InnerHtml;
                 }
             }
             //上传文章hash到星云链
