--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
             
         </div>
         <script>
-            if(typeof(webExtensionWallet) === "undefined"){
-                $(".noExtensionClass").show();
-            }
             var NebPay = require("nebpay");     
             var nebPay = new NebPay();
             var dappAddress = "n1xYCAmWsnmaBKWekD71zwUscRMBZt5jmna";
@@ -35,6 +32,10 @@
                 listener: cbResult
             });
             function cbResult(resp){
+                if(typeof(webExtensionWallet) === "undefined"){
+                    $(".noExtensionClass").show();
+                }
+
                 var result = resp.result;
                 if (result === 'null'){
                     return 
@@ -44,13 +45,13 @@
                     var base = new Base64();
                     var InnerHtml;
                     for (var i = 0; i < articlenum; i++) {
-                        var title="文章标题:"+base.decode(result[i].title);
+                        var title=base.decode(result[i].title);
                         var addr="http://66.42.54.83:8080/ipfs/"+result[i].contenthash;
                         var author="作者："+result[i].account;
                         console.log(title);
                         console.log(addr);
                         console.log(author);
-                        InnerHtml=InnerHtml+"<br /><p>"+title+"<a href="+addr+">打开文章</a></p><p>"+author+"</p><br/>";
+                        InnerHtml=InnerHtml+"<br /><p>"+"文章标题:"+"<a href="+addr+">"+title+"</a></p><p>"+author+"</p><br/>";
                     }
                     document.getElementById("articlelist").innerHTML=InnerHtml;
                 }
