添加使用说明

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <body>
         <p>基于ipfs的博客系统（只支持导入html格式的文章）</p>
         <br/>
+        <a href="http://66.42.54.83:8080/ipfs/QmU9m8RxgskT6zCfzuZUHhp5AaGri21pGPUgvVUTGxwBwW">查看使用说明，帮助文档</a>
+        <br />
+        <br />
         <input type="file" id="upfile" accept="text/html" />
         <br/><br/>
         <button id="upload">导入文章</button>
